Force full-resync if last sync was more than 25 days ago

Fixes 'The requested minimum modification time lies too far in the past'
error from Google Calendar resource that users saw after they returned
from vacation :-)

Also simplifies the code and speeds up sync by not fetching all existing
items before fetching data from Google (I probably copy-pasted it from
somewhere in the early days without actually understanding what's going on)

BUG: 308122
FIXED-IN: 4.10.4