resources/google/calendar/resource_tasks.cpp
@@ -154,6 +154,8 @@ void CalendarResource::tasksReceived( KJob *job )
   }
 
   FetchListJob *fetchJob = dynamic_cast< FetchListJob * >( job );
+  const QUrl requestUrl = fetchJob->url();
+  const bool isIncremental = requestUrl.hasQueryItem( QLatin1String( "updatedMin" ) );
   Collection collection = fetchJob->property( "collection" ).value< Collection >();
 
   Item::List removed;
@@ -179,7 +181,11 @@ void CalendarResource::tasksReceived( KJob *job )
 
   }
 
-  itemsRetrievedIncremental( changed, removed );
+  if ( isIncremental ) {
+    itemsRetrievedIncremental( changed, removed );
+  } else {
+    itemsRetrieved( changed );
+  }
 
   collection.setRemoteRevision( QString::number( KDateTime::currentUtcDateTime().toTime_t() ) );
   CollectionModifyJob *modifyJob = new CollectionModifyJob( collection, this );
